2009-05-06  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c: Fixed minor regression that caused flicker
	  in screen rotation transition.

2009-05-06  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Use libgnome-menu to (re)load task launcher contents.
	Fixes: NB#94416, NB#96458, NB#100815

	* configure.ac:
	* data/Makefile.am:
	* data/desktop/Makefile.am:
	* data/desktop/applications.directory:
	* data/menu/Makefile.am:
	* data/menu/hildon.menu:
	* debian/control:
	* debian/hildon-desktop.install:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-launcher-item.c:
	* src/launcher/hd-launcher-item.h:
	* src/launcher/hd-launcher-tree.c:
	* src/launcher/hd-launcher-tree.h:
	* src/launcher/hd-launcher.c:
	* src/launcher/hd-launcher.h:

2009-05-06  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.47

2009-05-05  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#114409 - Launcher and application view dismissible when
	                   tapped inbetween the icons.
	                   	
	* src/launcher/hd-launcher-grid.c: Add an actor to block clicks
	  between rows of icons

2009-05-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Problem fix: when two browser windows are open (say bookmarks
	and a web page) and you close the web page you end up in app
	view with a ghost window (not) showing.

	This is because the browser maps a window while we're in switcher
	view.  Then we go to app view and while the transition between
	states is still ongoing it destroys that window and set_visibilities()
	cannot restore the visibility of the correct actor because the
	task navigator is still showing.

	* src/mb/hd-wm.c (hd_wm_client_activate):
	  Don't animate TASK_NAV -> APP.  Related to NB#111744.

2009-05-05  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c: Re-enabled sounds as NB#105635 appears to
	  have been fixed now. Added easing to opacity in 'fade' transiton,